# WebHomework_10

./: README.md  pyproject.toml
hw_project/: config.ini
hw_project/hw_project/: settings.py
hw_project/quotes/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html  quote.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: views.py
hw_project/users/templates/users/: login.html  signup.html
hw_project/utils/: authors.json  migration.py
hw_project/utils/mongodb/: connect.py
