[tool.poetry]
name = "webhomework-10"
version = "0.1.0"
description = ""
authors = ["HMixany <137229468+HMixany@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pymongo = "^4.6.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
